# chatdi

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
src/: manage.py  requirements.txt
src/apps/a12n/: admin.py  apps.py  enums.py  models.py
src/apps/a12n/api/v1/: schemas.py
src/apps/users/: admin.py  models.py
src/chatdi/: manage.py  requirements.txt
src/chatdi/apps/a12n/: admin.py  models.py  urls.py
src/chatdi/apps/a12n/api/v1/: mixins.py  schemas.py
src/chatdi/apps/a12n/api/v1/serializers/: jwt.py
src/chatdi/apps/a12n/api/v1/views/: jwt.py
src/chatdi/apps/a12n/migrations/: 0001_initial.py  0002_initial.py
src/chatdi/apps/users/: admin.py  apps.py  mangers.py  models.py
src/chatdi/apps/users/migrations/: 0001_initial.py
src/chatdi/core/: admin.py  settings.py  urls.py
src/chatdi/core/interfaces/: base.py
src/chatdi/core/logging/: conf.py
src/chatdi/core/spectacular/: schemas.py  views.py
src/chatdi/core/urls/: __init__.py
src/core/: abstract_models.py
src/core/interfaces/: base.py
src/core/logging/: __init__.py  conf.py  filters.py  handlers.py
src/core/middlewares/: real_ip.py
src/core/spectacular/: constants.py
src/core/urls/: api_v1.py
src/ws_fastapi/: __init__.py  _django_setup.py  main.py  redis.py  requirements.txt
src/ws_fastapi/conversations/: router.py
src/ws_fastapi/conversations/services/: conversation_ws_processor.py
