[project]
name = "ChatDi"
version = "0.0.0"
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/platsajacki/chatdi"
Repository = "https://github.com/platsajacki/chatdi"

# ----------------------------
# Optional: Ruff
# ----------------------------
[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
exclude = ["migrations", "venv", ".mypy_cache", "__pycache__"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E", "F", "B", "N", "I", "UP", "SIM"]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "testing",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
"testing" = ["pytest", "pytest_lazy_fixtures", "pytest_mock"]
"django" = ["django", "django_query_profiler", "phonenumber_field", "rest_framework", "rest_framework_api_key"]

# ----------------------------
# Static typing: mypy
# ----------------------------
[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
exclude = "(venv|migrations|tests)"

# ----------------------------
# Testing: Pytest
# ----------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
DJANGO_SETTINGS_MODULE = "chatdi.settings"
norecursedirs = ["env/*", "venv/*"]
addopts = ["-s", "-v", "-n", "auto", "-p", "no:cacheprovider"]
testpaths = ["src/_tests/"]
python_files = ["test_*.py"]

# ----------------------------
# Coverage
# ----------------------------
[tool.coverage.run]
omit = [
    "__init__.py",
    "*/migrations/*",
    "asgi.py",
    "wsgi.py",
    "*/_tests/*",
    "manage.py",
    "logging_handlers.py",
]
